--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,16 @@
 body {
-
+    font-family: 'Roboto', sans-serif;
+    background-color: #ffe2b0;
 }
 header {
+
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+.logo__img {
 
 }
 
@@ -12,12 +21,6 @@ header {
 
 }
 
-.logo {
-
-}
-.logo__img {
-
-}
 .background_img {
 
 }
