--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,3 +7,23 @@ body {
     text-align: center;
     margin: 0 0 1.25rem 0;
 }
+
+.logo__img {
+    width: auto;
+    height: auto;
+}
+
+.main_menu {
+    display: inline-block;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.125rem;
+    text-transform:uppercase
+}
+
+.main_menu__item {
+    display: inline-block;
+    margin: 0 1.25rem;
+    color: #000;
+    text-decoration: none;
+}
