--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -82,3 +82,17 @@ nav {
     text-transform: uppercase;
     transition: all 0.3s ease;
 }   
+
+.background_img {
+    display: block;
+    align-items: center;
+    background-image: url(../assets/img/background.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    z-index: -1;
+    margin: 0 0 1.25rem 0;
+}
