.h1_title p: text-align: justify;

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -145,7 +145,7 @@ nav {
 .h1_title p {
     display: inline-block;
     align-items: center;
-    text-align: center;
+    text-align: justify;
     font-family: "Roboto", sans-serif;
     font-size: 1.125rem;
     font-weight: 400;
