--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -171,12 +171,18 @@ nav {
     margin: 0 0 1.25rem 0;
 }
 
+hr {
+    align-items: center;
+    text-align: center;
+    margin: 0 0 1.25rem 0;
+    border: 0;
+    border-top: 2px solid #000;
+    width: 64rem;
+}
 /* Footer Copyright Styling */
 .copyright {
     display: block;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
     text-align: center;
     padding: 1rem 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
